# arghelp

./: .travis.yml  CHANGELOG.rst  LICENSE  README.md  README.rst  demo.py  pyproject.toml  requirements.txt  setup.py
arghelp/: __init__.py  app.py  cli.py
demos/: groups.py  simple_usage.py  simple_with_root.py  subcmd_with_root.py  subcmds.py
tests/: test_arghelp.py
