[build-system]
requires = ["flit"]
build-backend = "flit.buildapi"

[tool.flit.metadata]
module = "arghelp"
author = "Michael V. DePalatis"
author-email = "mike@depalatis.net"
home-page = "https://github.com/mivade/arghelp"
description-file="README.md"
requires-python=">=3.6.1,<4"
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: User Interfaces",
]

[tool.flit.metadata.requires-extra]
test = [
    "pytest>=5.0",
    "pytest-cov>=2.7.1",
]
